--- a/_includes/v1/default.html
+++ b/_includes/v1/default.html
@@ -6,7 +6,7 @@
   {%- include v1/experience.html -%}
 {%- endif -%}
 
-{%- if site.data.projects.size > 0 -%}
+{%- if site.data.skill.size > 0 -%}
   {%- include v1/skills.html -%}
 {%- endif -%}
 
