--- a/_includes/v1/default.html
+++ b/_includes/v1/default.html
@@ -7,7 +7,7 @@
 {%- endif -%}
 
 {%- if site.data.skill.size > 0 -%}
-  {%- include v1/skills.html -%}
+  {%- include v1/skill.html -%}
 {%- endif -%}
 
 {%- if site.data.education.size > 0 -%}
