--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,16 @@
 
       {%- include about.html -%}
 
-      {%- include v1/default.html -%}
+      {%- if site.version == 2 -%}
+        {% for section in site.content %}
+          <div class="container {{ section.layout }}-container">
+            <h3 id="{{ section.title | slugify }}">{{ section.title }}</h3>
+            {% include {{ section.layout | prepend: "section-" | append: ".html" }} content=section.content %}
+          </div>
+        {% endfor %}
+      {% else %}
+        {%- include v1/default.html -%}
+      {%- endif -%}
     </div>
   </main>
 
