--- a/_includes/v1/default.html
+++ b/_includes/v1/default.html
@@ -1,19 +1,50 @@
-{%- if site.data.projects.size > 0 -%}
-  {%- include v1/projects.html -%}
-{%- endif -%}
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
 
-{%- if site.data.experience.size > 0 -%}
-  {%- include v1/experience.html -%}
-{%- endif -%}
+{%- include head.html -%}
 
-{%- if site.data.skill.size > 0 -%}
-  {%- include v1/skill.html -%}
-{%- endif -%}
+<body class="{% if site.darkmode %}dark{% endif %}">
 
-{%- if site.data.education.size > 0 -%}
-  {%- include v1/education.html -%}
-{%- endif -%}
+{%- include header.html -%}
 
-{%- if site.more_content -%}
-  {%- include v1/more.html -%}
-{%- endif -%}
+<main class="page-content" aria-label="Content">
+  <div class="wrapper">
+
+    {%- if jekyll.environment == 'production' and site.gtm -%}
+    {%- include gtm_body.html -%}
+    {%- endif -%}
+
+    {%- include about.html -%}
+
+    {%- if site.data.introduce.size > 0 -%}
+    {%- include introduce.html -%}
+    {%- endif -%}
+
+    {%- if site.data.experience.size > 0 -%}
+    {%- include experience.html -%}
+    {%- endif -%}
+
+    {%- if site.data.skill.size > 0 -%}
+    {%- include skill.html -%}
+    {%- endif -%}
+
+    {%- if site.data.education.size > 0 -%}
+    {%- include education.html -%}
+    {%- endif -%}
+
+    {%- if site.data.class.size > 0 -%}
+    {%- include class.html -%}
+    {%- endif -%}
+
+    {%- if site.more_content -%}
+    {%- include more.html -%}
+    {%- endif -%}
+
+  </div>
+</main>
+
+{%- include footer.html -%}
+<script src="{{ '/assets/js/index.js' | relative_url }}"></script>
+</body>
+
+</html>
