--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,36 +3,48 @@
 
 {%- include head.html -%}
 
-<body class="{% if site.darkmode == true and site.darkmode != 'never' %}dark{% endif %}">
+<body class="{% if site.darkmode %}dark{% endif %}">
 
-  {%- include header.html -%}
+{%- include header.html -%}
 
-  <main class="page-content" aria-label="Content">
-    <div class="wrapper">
+<main class="page-content" aria-label="Content">
+  <div class="wrapper">
 
-      {%- if jekyll.environment == 'production' and site.gtm -%}
-        {%- include gtm_body.html -%}
-      {%- endif -%}
+    {%- if jekyll.environment == 'production' and site.gtm -%}
+    {%- include gtm_body.html -%}
+    {%- endif -%}
 
-      {%- include about.html -%}
+    {%- include about.html -%}
 
-      {%- if site.version == 2 -%}
-        {% for section in site.content %}
-          <div class="container {{ section.layout }}-container">
-            <h3 id="{{ section.title | slugify }}">{{ section.title }}</h3>
-            {% include {{ section.layout | prepend: "section-" | append: ".html" }} content=section.content %}
-          </div>
-        {% endfor %}
-      {% else %}
-        {%- include v1/default.html -%}
-      {%- endif -%}
-    </div>
-  </main>
+    {%- if site.data.introduce.size > 0 -%}
+    {%- include introduce.html -%}
+    {%- endif -%}
 
-  {%- include footer.html -%}
-  {% if site.darkmode == false %}
-    <script src="{{ '/assets/js/index.js' | relative_url }}"></script>
-  {% endif %}
+    {%- if site.data.experience.size > 0 -%}
+    {%- include experience.html -%}
+    {%- endif -%}
+
+    {%- if site.data.skill.size > 0 -%}
+    {%- include skill.html -%}
+    {%- endif -%}
+
+    {%- if site.data.education.size > 0 -%}
+    {%- include education.html -%}
+    {%- endif -%}
+
+    {%- if site.data.class.size > 0 -%}
+    {%- include class.html -%}
+    {%- endif -%}
+
+    {%- if site.more_content -%}
+    {%- include more.html -%}
+    {%- endif -%}
+
+  </div>
+</main>
+
+{%- include footer.html -%}
+<script src="{{ '/assets/js/index.js' | relative_url }}"></script>
 </body>
 
 </html>
