--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,9 @@
     {%- include class.html -%}
     {%- endif -%}
 
+    {%- if site.more_content -%}
+    {%- include more.html -%}
+    {%- endif -%}
   </div>
 </main>
 
