--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 {%- include head.html -%}
 
-<body class="{% if site.darkmode %}dark{% endif %}">
+<body class="{% if site.darkmode == true and site.darkmode != 'never' %}dark{% endif %}">
 
 {%- include header.html -%}
 
@@ -16,38 +16,23 @@
 
     {%- include about.html -%}
 
-    {%- if site.data.introduce.size > 0 -%}
-    {%- include introduce.html -%}
-    {%- endif -%}
-
-    {%- if site.data.experience.size > 0 -%}
-    {%- include experience.html -%}
-    {%- endif -%}
-
-    {%- if site.data.toy-project.size > 0 -%}
-    {%- include toy-projects.html -%}
-    {%- endif -%}
-
-    {%- if site.data.skill.size > 0 -%}
-    {%- include skill.html -%}
-    {%- endif -%}
-
-    {%- if site.data.education.size > 0 -%}
-    {%- include education.html -%}
-    {%- endif -%}
-
-    {%- if site.data.class.size > 0 -%}
-    {%- include class.html -%}
-    {%- endif -%}
-
-    {%- if site.more_content -%}
-    {%- include more.html -%}
+    {%- if site.version == 2 -%}
+    {% for section in site.content %}
+    <div class="container {{ section.layout }}-container">
+      <h3>{{ section.title }}</h3>
+      {% include {{ section.layout | prepend: "section-" | append: ".html" }} content=section.content %}
+    </div>
+    {% endfor %}
+    {% else %}
+    {%- include v1/default.html -%}
     {%- endif -%}
   </div>
 </main>
 
 {%- include footer.html -%}
+{% if site.darkmode == false %}
 <script src="{{ '/assets/js/index.js' | relative_url }}"></script>
+{% endif %}
 </body>
 
 </html>
